# portaldot-hackathon-2026-PortalModeler-Tuanngoc

./: .env.example  .gitignore  DEMO_FLOW.md  DEV_ACCOUNT_THREAD.md  INSTRUCTIONS.md  LOCAL_SETUP.md  PAIN_POINTS.md  PHASE0_FOUNDATION.md  PORTALDOT_WORKBENCH.md  PORTALMODELER_IDEAS.md  PROGRESS_REVIEW_SUBMISSION.md  README.md  WORKBENCH_USER_GUIDE.md  contract-address.stale.txt  requirements.txt  startnode.txt  submission_answers.txt
contract/: Cargo.toml  lib.rs  rust-toolchain.toml
contract/src/: lib.rs  membership_contract.rs
front-end/: .env.example  README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
front-end/src/: App.tsx  styles.css
front-end/src/components/: HomePage.tsx  LightweightFlowCanvas.tsx
front-end/src/domain/: constants.ts  types.ts
front-end/src/flow/: graph.ts  workflow.ts
model/: generate.py  membership.json
scripts/: call.py  common.py  deploy.py  doctor.py  query.py  run_node.py  transfer.py
