[package]
name = "membership"
version = "0.1.0"
authors = ["PortalModeler Team"]
edition = "2021"

[dependencies]
ink_primitives = { version = "=3.3.1", default-features = false }
ink_metadata = { version = "=3.3.1", default-features = false, features = ["derive"], optional = true }
ink_env = { version = "=3.3.1", default-features = false }
ink_storage = { version = "=3.3.1", default-features = false }
ink_storage_derive = { version = "=3.3.1", default-features = false }
ink_lang = { version = "=3.3.1", default-features = false }
ink_lang_codegen = { version = "=3.3.1", default-features = false }
ink_lang_ir = { version = "=3.3.1", default-features = false }
ink_lang_macro = { version = "=3.3.1", default-features = false }
ink_allocator = { version = "=3.3.1", default-features = false }
ink_engine = { version = "=3.3.1", default-features = false }
ink_prelude = { version = "=3.3.1", default-features = false }

scale = { package = "parity-scale-codec", version = "=3.1.2", default-features = false, features = ["derive"] }
parity-scale-codec-derive = { version = "=3.1.2", default-features = false }
scale-info = { version = "=2.1.2", default-features = false, features = ["derive"], optional = true }
scale-info-derive = { version = "=2.1.2", default-features = false }
proc-macro-crate = "=1.1.3"

[lib]
name = "membership"
path = "src/lib.rs"
crate-type = ["cdylib"]

[features]
default = ["std"]
std = [
  "ink_metadata/std",
  "ink_env/std",
  "ink_storage/std",
  "ink_primitives/std",
  "scale/std",
  "scale-info/std",
]
ink-as-dependency = []
